# ai_python_tutor_app

./: .easignore  README.md  app.json  eas.json  package-lock.json  package.json
app/: _layout.tsx  index.tsx  lesson.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  explore.tsx  learn.tsx  profile.tsx  progress.tsx
backend/: .env  README.md  llms.py  main.py  pyproject.toml
backend/crews/: challenge_generator.py  lesson_generator.py
backend/data/: coursework_offerings.py  default_coursework.py  lesson_blueprints.py
backend/models/: __init__.py  api_models.py  coursework_models.py  execution_models.py  lesson_models.py
backend/services/: code_analyzer.py  code_executor.py
components/modals/: LessonCompletionModal.tsx  NewChallengeModal.tsx  OnboardingModal.tsx  index.ts
components/modals/slides/: ChallengeSlide1.tsx  ChallengeSlide2.tsx  PreferencesSlide.tsx  UserDetailsSlide.tsx  WelcomeSlide.tsx
components/providers/: ReduxProvider.tsx
components/ui/: ChecklistLoader.tsx  CodeEditor.tsx  CoinDeductToastOverlay.tsx  CoinFlightOverlay.tsx  ExerciseEditor.tsx  LessonCard.tsx  LoadingSpinner.tsx  SimpleCodeEditor.tsx
services/: api.ts
store/: hooks.ts  index.ts  store.ts
store/slices/: coinsSlice.ts  progressSlice.ts  settingsSlice.ts  userSlice.ts
